--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures-util = "0.3.30"
 dotenv = "0.15.0"
 thiserror = "1.0.60"
 serde_json = "1.0.117"
+serde = { version = "1.0.202", features = ["derive"] }
 
 [dev-dependencies]
 mockall = "0.12.1"
