add redis.yml with the config to deploy Redis

--- a/Docker/redis.yml
+++ b/Docker/redis.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
 
   redis-master1:
@@ -9,7 +7,7 @@ services:
     command: [ "redis-server", "--bind", "0.0.0.0", "--port", "7001", "--tcp-backlog", "511", "--protected-mode", "no", "--appendonly", "no", "--save", "", "--cluster-enabled", "yes", "--cluster-config-file", "nodes.conf", "--cluster-node-timeout", "5000", "--requirepass", "${REDISPASS}", "--masterauth", "${REDISPASS}" ]
     network_mode: host
     volumes:
-      - "master1_data::/data"
+      - "master1_data:/data"
       - "master1_config:/etc/redis"
     deploy:
       resources:
@@ -24,7 +22,7 @@ services:
     command: [ "redis-server", "--bind", "0.0.0.0", "--port", "7002", "--tcp-backlog", "511", "--protected-mode", "no", "--appendonly", "no", "--save", "", "--cluster-enabled", "yes", "--cluster-config-file", "nodes.conf", "--cluster-node-timeout", "5000", "--requirepass", "${REDISPASS}", "--masterauth", "${REDISPASS}" ]
     network_mode: host
     volumes:
-      - "master2_data::/data"
+      - "master2_data:/data"
       - "master2_config:/etc/redis"
     deploy:
       resources:
@@ -38,7 +36,7 @@ services:
     command: [ "redis-server", "--bind", "0.0.0.0", "--port", "7003", "--tcp-backlog", "511", "--protected-mode", "no", "--appendonly", "no", "--save", "", "--cluster-enabled", "yes", "--cluster-config-file", "nodes.conf", "--cluster-node-timeout", "5000", "--requirepass", "${REDISPASS}", "--masterauth", "${REDISPASS}" ]
     network_mode: host
     volumes:
-      - "master3_data::/data"
+      - "master3_data:/data"
       - "master3_config:/etc/redis"
     deploy:
       resources:
@@ -54,7 +52,7 @@ services:
     depends_on:
       - redis-master1
     volumes:
-      - "slave1_data::/data"
+      - "slave1_data:/data"
       - "slave1_config:/etc/redis"
     deploy:
       resources:
@@ -70,7 +68,7 @@ services:
     depends_on:
       - redis-master2
     volumes:
-      - "slave2_data::/data"
+      - "slave2_data:/data"
       - "slave2_config:/etc/redis"
     deploy:
       resources:
@@ -86,7 +84,7 @@ services:
     depends_on:
       - redis-master3
     volumes:
-      - "slave3_data::/data"
+      - "slave3_data:/data"
       - "slave3_config:/etc/redis"
     deploy:
       resources:
