--- a/Docker/rabbitmq.yml
+++ b/Docker/rabbitmq.yml
@@ -4,6 +4,7 @@ services:
   rabbitmq1:
     image: rabbitmq:3.9-management
     hostname: rabbitmq1
+
     container_name: rabbitmq1
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
@@ -11,9 +12,9 @@ services:
     ports:
       - "15672:15672"
       - "5672:5672"
-    command: bash -c "rabbitmq-server --erlang-cookie ${RABBITMQ_ERLANG_COOKIE}"
     volumes:
       - rabbitmq1-data:/var/lib/rabbitmq
+      - ./.erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
     networks:
       rabbitmq:
         aliases:
@@ -29,9 +30,9 @@ services:
     ports:
       - "15673:15672"
       - "5673:5672"
-    command: bash -c "rabbitmq-server --erlang-cookie ${RABBITMQ_ERLANG_COOKIE}"
     volumes:
       - rabbitmq2-data:/var/lib/rabbitmq
+      - ./.erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
     networks:
       rabbitmq:
         aliases:
@@ -47,9 +48,9 @@ services:
     ports:
       - "15674:15672"
       - "5674:5672"
-    command: bash -c "rabbitmq-server --erlang-cookie ${RABBITMQ_ERLANG_COOKIE}"
     volumes:
       - rabbitmq3-data:/var/lib/rabbitmq
+      - ./.erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
     networks:
       rabbitmq:
         aliases:
