--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ dotenv = "0.15.0"
 thiserror = "1.0.60"
 serde_json = "1.0.117"
 serde = { version = "1.0.202", features = ["derive"] }
+rand = "0.9.0"
 
 
 [dev-dependencies]
